styles.css
body {
    margin: 0;
    background-color: silver;
    overflow: hidden;
  }
  #WebARRocksFaceCanvas, #threeCanvas {
    position: fixed;
    width: 100vw;
    top: 0;
    left: 0;

    /* mirror the canvas: */
    transform: rotateY(180deg);
  }

  #WebARRocksFaceCanvas {
    z-index: 0;
    display: none;
  }
  #threeCanvas {
    z-index: 1;
  }

  video{
    z-index: 2;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
  }

  #controls {
    display: none;
    position: fixed;
    z-index: 2;
    width: 100vw;
    bottom: 0;
    left: 0;
    flex-direction: row;
    flex-wrap: wrap;
  }

  #controls > div {
    cursor: pointer;
    flex-grow: 1;
    font-variant: small-caps;
    font-size: 14pt;
    text-align: center;
    min-width: 110px;
    box-sizing: border-box;
    padding-top: 10px;
    background: rgba(0, 0, 0, 0.5);
    height: 40px;
    color: #eee;
  }

  #controls > div:hover {
    background: rgba(50, 50, 50, 0.5);
    color: #fff;
  }

  #loading {
    top: 0;
    left: 0;
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 100;
    pointer-events: auto; /* Enable pointer events */
    display: flex; 
    cursor: pointer; /* Change cursor to pointer */
  }

  #loading > div {
    margin: auto;
    color: white;
    font-size: 32pt;
  }

  #startButton {
    position: fixed;
    z-index: 101;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    padding: 10px 20px;
    font-size: 16pt;
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    border: none;
    cursor: pointer;
  }
  #startButton:hover {
    background-color: rgba(50, 50, 50, 0.7);
  }

